--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore all cache files
 .DS_Store
+__pycache__
+__.ipynb_checkpoints__
 
 # ignore all dataset folders
 Datasets
 AI Component/data
+
