--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,20 @@
-flask==1.1.4
-flask-login==0.6.2
-flask-wtf==1.0.1
 py-algorand-sdk==1.8.0
 python-dotenv==0.21.0
-flask-cors==3.0.10
+flask
+flask-cors==3.0.8
 markupsafe==2.0.1
 albumentations==1.3.0
 matplotlib==3.4.3
-numpy==1.20.3
+numpy==1.21.4
 pandas==1.3.4
 Pillow==9.3.0
 pydicom==2.3.1
 scikit_learn==1.1.3
-syft==0.6.0
-torch==1.10.1
-torchvision==0.11.2
+# syft==0.6.0
+torch==1.10.0
+torchvision==0.11.1
 tqdm==4.62.3
 transformers==4.25.1
+# BigchainDB==2.2.2
+bigchaindb-driver==0.6.2
+
